# rusty

./: .gitignore  Cargo.toml  README.md  RUSTY_PROMPT.md  decisions.md  install.ps1  install.sh  rust-toolchain.toml  scratch_test.rs
.github/workflows/: ci.yml
agent-tasks/: agent-tasks.md  completed-tasks.md
assets/: generate_favicon.py
content/: manifest.toml
content/lessons/advanced-01-concurrency/: lesson.toml
content/lessons/advanced-01-concurrency/solution/: Cargo.toml
content/lessons/advanced-01-concurrency/solution/src/: main.rs
content/lessons/advanced-01-concurrency/starter/src/: main.rs
content/lessons/advanced-02-async/: lesson.toml
content/lessons/advanced-02-async/solution/src/: main.rs
content/lessons/advanced-02-async/starter/: Cargo.toml
content/lessons/advanced-02-async/starter/src/: main.rs
content/lessons/advanced-03-traits/: lesson.toml
content/lessons/advanced-03-traits/solution/: Cargo.toml
content/lessons/advanced-03-traits/solution/src/: main.rs
content/lessons/advanced-03-traits/starter/src/: main.rs
content/lessons/foundations-01-hello/: lesson.toml
content/lessons/foundations-01-hello/solution/: Cargo.toml
content/lessons/foundations-01-hello/solution/src/: main.rs
content/lessons/foundations-01-hello/starter/: Cargo.toml
content/lessons/foundations-01-hello/starter/src/: main.rs
content/lessons/foundations-02-variables/: lesson.toml
content/lessons/foundations-02-variables/solution/: Cargo.toml
content/lessons/foundations-02-variables/solution/src/: main.rs
content/lessons/foundations-02-variables/starter/: Cargo.toml
content/lessons/foundations-02-variables/starter/src/: main.rs
content/lessons/foundations-03-ownership/: lesson.toml
content/lessons/foundations-03-ownership/solution/src/: main.rs
content/lessons/foundations-03-ownership/starter/: Cargo.toml
content/lessons/foundations-04-borrows/: lesson.toml
content/lessons/foundations-05-structs/: lesson.toml
content/lessons/foundations-06-enums/: lesson.toml
content/lessons/foundations-06-enums/solution/: Cargo.toml
content/lessons/foundations-07-errors/: lesson.toml
content/lessons/foundations-07-errors/solution/: Cargo.toml
content/lessons/foundations-07-errors/starter/: Cargo.toml
content/lessons/foundations-08-collections/: lesson.toml
content/lessons/foundations-08-collections/solution/: Cargo.toml
content/lessons/foundations-08-collections/starter/: Cargo.toml
content/lessons/foundations-09-control-flow/: lesson.toml
content/lessons/foundations-10-modules/: lesson.toml
content/lessons/foundations-10-modules/solution/: Cargo.toml
content/lessons/foundations-11-testing/: lesson.toml
content/lessons/foundations-11-testing/starter/: Cargo.toml
content/lessons/intermediate-01-traits/: lesson.toml
content/lessons/intermediate-01-traits/solution/: Cargo.toml
content/lessons/intermediate-01-traits/starter/: Cargo.toml
content/lessons/intermediate-02-iterators/: lesson.toml
content/lessons/intermediate-03-lifetimes/: lesson.toml
content/lessons/intermediate-04-smart-pointers/: lesson.toml
content/lessons/intermediate-05-parsing/: lesson.toml
content/lessons/intermediate-05-parsing/solution/: Cargo.toml
content/lessons/intermediate-05-parsing/starter/: Cargo.toml
content/lessons/intermediate-06-diffing/: lesson.toml
crates/rusty-app/: Cargo.toml
crates/rusty-app/src/: annotation.rs  editor.rs  exercise_view.rs  lesson_view.rs  main.rs  markdown.rs  state.rs  theme.rs  voice.rs
crates/rusty-curriculum/: Cargo.toml
crates/rusty-curriculum/src/: lib.rs  loader.rs  model.rs
crates/rusty-grader/: Cargo.toml
crates/rusty-grader/src/: annotate.rs  diagnostic.rs  error_map.rs  evaluate.rs  lib.rs  verdict.rs
crates/rusty-grader/tests/fixtures/: e0382.json  warning.json
crates/rusty-host/: Cargo.toml
crates/rusty-host/src/: content.rs  files.rs  grade.rs  lib.rs  lsp.rs  pty.rs  sandbox.rs
crates/rusty-host/tests/: content.rs  files.rs  grade.rs  lesson1_grade.rs  lesson7_grade.rs  lesson8_grade.rs  lesson_advanced1_grade.rs  lesson_advanced2_grade.rs  lesson_advanced3_grade.rs  lesson_intermediate2_grade.rs  lesson_intermediate3_grade.rs  lesson_intermediate4_grade.rs  lesson_intermediate5_grade.rs  lesson_intermediate6_grade.rs  lsp_integration.rs  pty_roundtrip.rs
crates/rusty-pedagogy/: Cargo.toml
crates/rusty-pedagogy/src/: lib.rs
crates/rusty-scheduler/: Cargo.toml
crates/rusty-scheduler/src/: lib.rs
crates/rusty-terminal/: Cargo.toml
crates/rusty-terminal/src/: cell.rs  grid.rs  lib.rs  performer.rs  terminal.rs  widget.rs
docs/: ARCHITECTURE.md  CONTENT_AUTHORING.md  INSTALL.md  PEDAGOGY.md
(+31 files in other folders)
