[package]
name = "rusty-app"
version = "0.0.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false
description = "Rusty — the eframe desktop application that teaches Rust by doing."

# The shipped executable is `rusty` (prompt §0: launches `./target/release/rusty`).
[[bin]]
name = "rusty"
path = "src/main.rs"

[dependencies]
eframe.workspace = true
egui.workspace = true
# Code-editor syntax highlighting via `egui_extras::syntax_highlighting` — the module
# ships in the default build; we deliberately do NOT enable the heavy `syntect` feature
# (its built-in fallback highlights Rust well enough, per prompt §6).
egui_extras.workspace = true
pulldown-cmark.workspace = true
rusty-curriculum = { path = "../rusty-curriculum" }
# The pure annotation/verdict model the grading UI renders (no cargo_metadata leaks in).
rusty-grader = { path = "../rusty-grader" }
rusty-host = { path = "../rusty-host" }
rusty-terminal = { path = "../rusty-terminal" }
